# DesktopAgent

./: .gitignore  GroundingDINO.py  ScreenUnderstanding.py  basic understanding.py  hybird.py  main.py  mousechecking.py  notepad_laucher.py  pyproject.toml  readme.md  requirement.txt  requirements.txt  treelevel.py
src/: GroundingDINO.py  desktop_manager.py  geetnewwindow.py  hybird.py  hybrid.py  main.py  ocr.py  safe_typing.py  template_matching.py  window_tracker.py  windows_search.py
src/api/: post_save.py
tests/: basic understanding.py  mousechecking.py  test-transformers.py  test_api.py  test_post.py  test_typing.py  typingtest.py
