[project]
name = "visionproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "imagegrab>=0.0.3",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "requests>=2.34.2",
    "transformers>=5.10.1",
]
